[project]
name = "hello-agents"
version = "0.1.0"
description = "基于 hello-agents 仓库的 Agent 学习与代码练习项目"
authors = [
    {name = "mojin"}
]
requires-python = "^3.10"
dependencies = [
    "openai (>=1.0.0)",
    "requests (>=2.31.0)",
    "tavily-python (>=0.3.0)",
    "python-dotenv (>=1.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.0.0)",
    "black (>=24.0.0)",
    "ruff (>=0.5.0)",
    "ipykernel (>=6.0.0)"
]
